CRUD DONE (not update) and working with mongo
