# src/handlers.py
@@ -1,20 +1,46 @@
 import connexion
+import pymongo
+from bson.json_util import dumps
 
-def get_user_info(username):
-    
-    import pymongo
-    from bson.json_util import dumps
-    
-    client = pymongo.MongoClient("mongodb+srv://distribuidos:Distribuidos20192@distribuidos-1rmzz.mongodb.net/test?retryWrites=true&w=majority")
-    db = client.sample_supplies
-    cursor = db.sales.find()
+client = pymongo.MongoClient(
+    "mongodb+srv://distribuidos:Distribuidos20192@distribuidos-1rmzz.mongodb.net/test?retryWrites=true&w=majority")
+
+def get_users():
+
+    db = client.distribuidos
+    cursor = db.users.find()
 
     return dumps(cursor)
 
-    #return {'username': col, 'id': '123', 'role': 'admin'}
+def get_user(username):
+    db = client.distribuidos
+    cursor = db.users.find_one(
+        {
+            "username": username,
+        }
+    )
+    return dumps(cursor)
 
-def get_commits(username, start_date, end_date):
-    return 'commits list'
+def insert_user(username):
+    db = client.distribuidos
+    user_id = 1
+    db.users.insert_one(
+        {
+            "id": user_id,
+            "username": username,
+        }
+    )
+    return get_user(username)
+
+def delete_user(username):
+
+    db = client.distribuidos
+    db.users.delete_one(
+        {
+            "username": username,
+        }
+    )
+    return "Se ha borrado el usuario con éxito"
 
 if __name__ == '__main__':
     app = connexion.FlaskApp(__name__, port=5000, specification_dir='openapi/')
