# src/openapi/indexer.yaml
@@ -3,17 +3,10 @@ info:
   title: User API
   version: 0.2.0
 paths:
-  "/users/{username}":
+  "/users/":
     get:
-      operationId: handlers.get_user_info
+      operationId: handlers.get_users
       summary: Returns user information.
-      parameters:
-        - name: username
-          in: path
-          required: true
-          schema:
-            type: string
-            format: path
       responses:
         "200":
           description: Successful response.
@@ -21,10 +14,11 @@ paths:
             "*/*":
               schema:
                 $ref: "#/components/schemas/User"
-  "/users/{username}/commits":
+
+  "/users/{username}":
     get:
-      operationId: handlers.get_commits
-      summary: Returns commits in a time range.
+      operationId: handlers.get_user
+      summary: Returns the user info.
       parameters:
         - name: username
           in: path
@@ -32,43 +26,78 @@ paths:
           schema:
             type: string
             format: path
-        - name: start_date
-          in: query
-          schema:
-            type: string
-        - name: end_date
-          in: query
-          schema:
-            type: string
       responses:
         "200":
           description: Successful response.
           content:
             "*/*":
               schema:
-                type: string
-            text/plain:
-              examples:
-                response:
-                  value: commits list
+                type: "array"
+                items:
+                  properties:
+                    id:
+                      type: "string"
+                    username:
+                      type: "integer"
+
+  "/users/insert/{username}":
+    get:
+      operationId: handlers.insert_user
+      summary: Inserts an user.
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+            format: path
+      responses:
+        "201":
+          description: Successful response.
+          content:
+            "*/*":
+              schema:
+                type: "array"
+                items:
+                  properties:
+                    id:
+                      type: "string"
+                    username:
+                      type: "integer"
+        "400":
+          description: "Bad Request"
+
+  "/users/delete/{username}":
+    get:
+      operationId: handlers.delete_user
+      summary: Deletes an user.
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+            format: path
+      responses:
+        "200":
+          description: Successful response.
+        "400":
+          description: "Bad Request"
+
 components:
   schemas:
     User:
-      type: object
+      type: "array"
       required:
-        - username
         - id
-        - role
+        - username
       properties:
-        username:
-          type: string
-          description: User username
-          example: john.doe
         id:
-          type: string
+          type: integer
           description: User id
           example: 123
-        role:
+        username:
           type: string
-          description: User role
-          example: collaborator
+          description: User name
+          example: juan
+        
